chore: set angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,17 @@
-<base href="/">
-<div>
-  <h1>Angular Material Styleguide</h1>
-  <router-outlet></router-outlet>
-  <footer>
-    <a [routerLink]="['']">home</a> | <a [routerLink]="['resources']">resources</a>
-  </footer>
-</div>
-
-
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened" (opened)="events.push('open!')"
+               (closed)="events.push('close!')">
+    Sidenav content
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
+    <router-outlet></router-outlet>
+    <p>Events:</p>
+    <div class="example-events">
+      <div *ngFor="let e of events">{{e}}</div>
+    </div>
+    <footer>
+      <a [routerLink]="['']">home</a> | <a [routerLink]="['resources']">resources</a>
+    </footer>
+  </mat-sidenav-content>
+</mat-sidenav-container>
