chore: sharedModule refacto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,14 @@
     Sidenav content
   </mat-sidenav>
   <mat-sidenav-content>
+    <sty-header></sty-header>
+
     <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
+    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item>Item 1</button>
+      <button mat-menu-item>Item 2</button>
+    </mat-menu>
     <router-outlet></router-outlet>
     <p>Events:</p>
     <div class="example-events">
