--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,21 +4,8 @@
     Sidenav content
   </mat-sidenav>
   <mat-sidenav-content>
-    <sty-header></sty-header>
-
-    <p><button mat-button (click)="sidenav.toggle()">sidenav.toggle()</button></p>
-    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>Item 1</button>
-      <button mat-menu-item>Item 2</button>
-    </mat-menu>
+    <sty-header (menuClicked)="sidenav.toggle()"></sty-header>
     <router-outlet></router-outlet>
-    <p>Events:</p>
-    <div class="example-events">
-      <div *ngFor="let e of events">{{e}}</div>
-    </div>
-    <footer>
-      <a [routerLink]="['']">home</a> | <a [routerLink]="['resources']">resources</a>
-    </footer>
+    <sty-footer></sty-footer>
   </mat-sidenav-content>
 </mat-sidenav-container>
